--- a/Framework/example/CMakeLists.txt
+++ b/Framework/example/CMakeLists.txt
@@ -11,7 +11,24 @@ file(TO_NATIVE_PATH "${PROJECT_SOURCE_DIR}/resources/" GLVIZ_RESOURCES_DIR)
 configure_file(config.hpp.in "${CMAKE_CURRENT_BINARY_DIR}/config.hpp")
 
 add_executable(example
-    example.cpp
+    main.cpp
+    CompactNSearch.cpp
+    CompactNSearch.h   
+	Field.h
+	Field.inl
+	NeighborhoodSearch.cpp
+	NeighborhoodSearch.h
+	ParticleManager.cpp
+	ParticleManager.h
+	SimProgramm.cpp
+	SimProgramm.h
+	SimSystem.h
+	SimSystem.cpp
+	SimViz.cpp
+	SimViz.h
+	Slot.h
+	Slot.inl
+	z_sort_table.h
 )
 
 include_directories(
