--- a/FluidSim.vcxproj
+++ b/FluidSim.vcxproj
@@ -75,7 +75,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN32\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glm;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN32\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -88,7 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN64\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glm;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN64\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -103,7 +103,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN32\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glm;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN32\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -119,7 +119,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN64\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glm;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glfw-3.2.1.bin.WIN64\include;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\Eigen 3.3.4;D:\Documents\computer science\studies\current studies\Fluid Simulation in Computer Graphics\FluidSim\FluidSim\extern\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -140,6 +140,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="SimSystem.cpp" />
     <ClCompile Include="SPHKernel.cpp" />
+    <ClCompile Include="SPHManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CompactNSearch.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="SimSystem.h" />
     <ClInclude Include="Slot.h" />
     <ClInclude Include="SPHKernel.h" />
+    <ClInclude Include="SPHManager.h" />
     <ClInclude Include="z_sort_table.h" />
   </ItemGroup>
   <ItemGroup>
