--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,15 @@
 [Debug##Default]
-Pos=60,60
+Pos=118,115
 Size=400,400
 Collapsed=0
 
 [ImGui Demo]
-Pos=173,129
+Pos=264,77
 Size=550,680
+Collapsed=0
+
+[SPHKernel Tests]
+Pos=284,101
+Size=1359,847
 Collapsed=0
 
