--- a/FluidSim.vcxproj
+++ b/FluidSim.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{386C0C5F-84FD-4AFB-9ED6-38F94425384F}</ProjectGuid>
     <RootNamespace>FluidSim</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -166,6 +166,7 @@
     <ClInclude Include="z_sort_table.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="BoxShader.frag" />
     <None Include="Field.inl" />
     <None Include="ParticleShader.frag" />
     <None Include="ParticleShader.vert" />
