--- a/FluidSim.vcxproj
+++ b/FluidSim.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{386C0C5F-84FD-4AFB-9ED6-38F94425384F}</ProjectGuid>
     <RootNamespace>FluidSim</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -145,6 +145,7 @@
     <ClCompile Include="SimSystem.cpp" />
     <ClCompile Include="SPHKernel.cpp" />
     <ClCompile Include="SPHManager.cpp" />
+    <ClCompile Include="SurfaceManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CompactNSearch.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Slot.h" />
     <ClInclude Include="SPHKernel.h" />
     <ClInclude Include="SPHManager.h" />
+    <ClInclude Include="SurfaceManager.h" />
     <ClInclude Include="z_sort_table.h" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +173,8 @@
     <None Include="ParticleShader.frag" />
     <None Include="ParticleShader.vert" />
     <None Include="Slot.inl" />
+    <None Include="SurfaceShader.frag" />
+    <None Include="SurfaceShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
