--- a/FluidSim.vcxproj.filters
+++ b/FluidSim.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="imgui_impl_glfw_gl3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SurfaceManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CompactNSearch.h">
@@ -113,6 +116,9 @@
     <ClInclude Include="imgui_internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SurfaceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Field.inl">
@@ -124,5 +130,7 @@
       <Filter>Header Files</Filter>
     </None>
     <None Include="BoxShader.frag" />
+    <None Include="SurfaceShader.frag" />
+    <None Include="SurfaceShader.vert" />
   </ItemGroup>
 </Project>
